--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_m.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_m.xml
@@ -15,7 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.147"
-        app:srcCompat="@drawable/ic_baseline_pets_24" />
+        app:srcCompat="@drawable/goyourmomselfdog"
+        tools:srcCompat="@drawable/goyourmomselfdog" />
 
     <TextView
         android:id="@+id/textViewForgetPasswordM"
@@ -62,6 +63,7 @@
         android:id="@+id/imageButtonBackM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="backonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
