--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
@@ -29,22 +29,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/stat_sys_upload_done"
+        app:srcCompat="@drawable/ic_baseline_360_24"
         tools:srcCompat="@drawable/ic_baseline_360_24" />
-
-    <ImageButton
-        android:id="@+id/imageButtonToPageAB"
-        android:layout_width="68dp"
-        android:layout_height="69dp"
-        android:onClick="BAonClick"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.017"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/stat_sys_upload_done"
-        tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
         android:id="@+id/imageButtonJB"
@@ -57,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/stat_sys_upload_done"
+        app:srcCompat="@drawable/ic_baseline_group_24"
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
@@ -71,7 +57,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/stat_sys_upload_done"
+        app:srcCompat="@drawable/ic_baseline_person_24"
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
@@ -84,7 +70,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/stat_sys_upload_done"
+        app:srcCompat="@drawable/ic_baseline_local_hospital_24"
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
@@ -101,6 +87,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
+
+    <ImageButton
+        android:id="@+id/imageButtonToPageAB"
+        android:layout_width="68dp"
+        android:layout_height="69dp"
+        android:onClick="BAonClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_baseline_house_24"
+        tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <TextView
         android:id="@+id/textViewToPageAB"
@@ -169,6 +169,7 @@
         android:id="@+id/imageButtonToPageG"
         android:layout_width="332dp"
         android:layout_height="130dp"
+        android:onClick="BGonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -193,6 +194,7 @@
         android:id="@+id/imageButtonToPageE"
         android:layout_width="332dp"
         android:layout_height="130dp"
+        android:onClick="BEonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -218,6 +220,7 @@
         android:id="@+id/imageButtonToPageC"
         android:layout_width="332dp"
         android:layout_height="130dp"
+        android:onClick="BConClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -230,6 +233,7 @@
         android:id="@+id/textViewToPageC"
         android:layout_width="146dp"
         android:layout_height="43dp"
+        android:onClick="BConClick"
         android:text="症狀查詢"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -243,6 +247,7 @@
         android:id="@+id/textViewToPageE"
         android:layout_width="146dp"
         android:layout_height="43dp"
+        android:onClick="BEonClick"
         android:text="日常護理"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -256,6 +261,7 @@
         android:id="@+id/textViewToPageG"
         android:layout_width="146dp"
         android:layout_height="43dp"
+        android:onClick="BGonClick"
         android:text="保健須知"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -269,6 +275,7 @@
         android:id="@+id/imageViewToPageC"
         android:layout_width="53dp"
         android:layout_height="48dp"
+        android:onClick="BConClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.268"
@@ -281,6 +288,7 @@
         android:id="@+id/imageViewToPageE"
         android:layout_width="53dp"
         android:layout_height="48dp"
+        android:onClick="BEonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.282"
@@ -293,6 +301,7 @@
         android:id="@+id/imageViewToPageG"
         android:layout_width="53dp"
         android:layout_height="48dp"
+        android:onClick="BGonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.279"
