--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
@@ -363,4 +363,15 @@
         app:layout_constraintTop_toTopOf="@+id/textViewTextA1"
         app:layout_constraintVertical_bias="1.0" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="350dp"
+        android:layout_height="293dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="0.431" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
